<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quote_content"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/delete_quote_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:layout_column="3"
        android:layout_gravity="top"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/quote_author"
        android:layout_width="287dp"
        android:layout_height="16dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"

        />

</GridLayout>